Style: fix overflow of MovieListSkeleton

--- a/modules/MovieSkeleton/movieSkeleton.module.scss
+++ b/modules/MovieSkeleton/movieSkeleton.module.scss
@@ -2,7 +2,7 @@
   margin: 30px 0;
 }
 .poster {
-  width: 190px;
+  max-width: 190px;
   height: 266px;
   background-color: #333;
   border-radius: 6px;
@@ -18,6 +18,6 @@
   margin-top: 10px;
   height: 24px;
   background-color: #333;
-  width: 190px;
+  max-width: 190px;
   border-radius: 4px;
 }
